--- a/StampFly/platformio.ini
+++ b/StampFly/platformio.ini
@@ -8,8 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-s3-devkitc-1]
+[env:m5stack-stamps3]
 platform = espressif32
-board = esp32-s3-devkitc-1
+board = m5stack-stamps3
 framework = arduino
 monitor_speed = 115200
