はじめの二十一歩: BLEで受信したデータを使ってモーターを制御する

--- a/StampFly/platformio.ini
+++ b/StampFly/platformio.ini
@@ -12,6 +12,8 @@
 platform = espressif32
 board = m5stack-stamps3
 framework = arduino
+build_flags =
+    -I ../common/include
 monitor_speed = 115200
 lib_deps = 
     FastLED
