--- a/JoyStick/platformio.ini
+++ b/JoyStick/platformio.ini
@@ -12,6 +12,8 @@
 platform = espressif32
 board = m5stack-atoms3
 framework = arduino
+build_flags =
+    -I ../common/include
 monitor_speed = 115200
 lib_deps = 
 	FastLED
