IMUから加速度センサー、ジャイロセンサー値を取得

--- a/StampFly/platformio.ini
+++ b/StampFly/platformio.ini
@@ -12,9 +12,10 @@
 platform = espressif32
 board = m5stack-stamps3
 framework = arduino
-build_flags =
-    -I ../common/include
+build_flags = 
+	-I ../common/include
 monitor_speed = 115200
 lib_deps = 
-    FastLED
+	FastLED
 	m5stack/M5Unified@^0.1.16
+	sparkfun/SparkFun BMI270 Arduino Library@^1.0.3
