Madgwickフィルタで姿勢推定

--- a/StampFly/platformio.ini
+++ b/StampFly/platformio.ini
@@ -19,3 +19,4 @@ lib_deps =
 	FastLED
 	m5stack/M5Unified@^0.1.16
 	sparkfun/SparkFun BMI270 Arduino Library@^1.0.3
+	arduino-libraries/Madgwick@^1.2.0
