--- a/StampFly/platformio.ini
+++ b/StampFly/platformio.ini
@@ -20,3 +20,4 @@ lib_deps =
 	m5stack/M5Unified@^0.1.16
 	sparkfun/SparkFun BMI270 Arduino Library@^1.0.3
 	arduino-libraries/Madgwick@^1.2.0
+	dfrobot/DFRobot_BMM150@^1.0.0
